updated for 2030 countdown

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html> 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="New Year 2021 Countdown">
-  <meta name="keywords" content="">
+  <meta name="description" content="Countdown to New Year 2030">
+  <meta name="keywords" content="countdown, new year, new, year, 2030">
   <meta name="author" content="Liliia Shashina">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>New Year 2021 Countdown</title>
+  <title>Countdown to New Year 2030</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 
     <!-- Caption div begin -->
     <div id="caption">
-      <h1>New Year 2021 Countdown</h1>
+      <h1>Countdown to New Year 2030</h1>
     </div><!-- End Caption div -->
 
     <!-- Flex container to display numeric data begin -->
